<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".AtCoder"
    style="@style/platformPage">
    <ImageView
        style="@style/platformImage"
        android:src="@drawable/at_coder_logo"
        android:id="@+id/platformImage"/>
    <TextView
        style="@style/platformUser"
        android:id="@+id/platformUser"
        android:text="@string/problemSet"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/queryRow">

        <EditText
            android:id="@+id/searchIdAC"
            style="@style/inputBox"
            android:layout_width="145dp"
            android:hint="@string/id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searchIndexAC"
            style="@style/inputBox"
            android:layout_width="145dp"
            android:hint="@string/index"
            app:layout_constraintStart_toEndOf="@+id/searchIdAC"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/clearAC"
            style="@style/clearFilter"
            app:layout_constraintStart_toEndOf="@+id/searchIndexAC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/queryRow"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/searchQueryAC"
            style="@style/inputBox"
            android:layout_width="230dp"
            android:hint="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/searchStatusAC"
            style="@style/dropDownSpinner"
            android:layout_width="90dp"
            app:layout_constraintStart_toEndOf="@id/searchQueryAC"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/searchStatusArrowAC"
            style="@style/dropDownImage"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toEndOf="@id/searchStatusAC"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_marginTop="20dp"
        style="@style/resultText"
        android:id="@+id/result"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="20dp"
        android:id="@+id/recyclerViewAC"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />


</LinearLayout>
