<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profiles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_plain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:textStyle="bold"
        android:gravity="bottom"
        android:textAlignment="center"
        android:layout_gravity="center_vertical"
        android:text="@string/profiles"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="20dp"
                style="@style/resultText"
                android:visibility="gone"
                android:text="@string/aboutUsername"
                android:id="@+id/result"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cfProfile"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/code_forces_logo"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cfName"
                    style="@style/title"
                    android:textSize="40dp"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="95dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cfCurr"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/unrated"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toStartOf="@+id/cfName"
                    app:layout_constraintTop_toBottomOf="@+id/cfName" />

                <TextView
                    android:id="@+id/cfMax"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/unrated"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cfName" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:visibility="gone"
                android:id="@+id/ccProfile"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/code_chef_logo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ccName"
                    style="@style/title"
                    android:textSize="40dp"
                     android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="95dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ccCurr"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/unrated"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toStartOf="@+id/ccName"
                    app:layout_constraintTop_toBottomOf="@+id/ccName" />

                <TextView
                    android:id="@+id/ccMax"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/unrated"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ccName" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:visibility="gone"
                android:id="@+id/acProfile"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/at_coder_logo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/acName"
                    style="@style/title"
                    android:textSize="40dp"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="95dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/acCurr"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/unrated"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toStartOf="@+id/acName"
                    app:layout_constraintTop_toBottomOf="@+id/acName" />

                <TextView
                    android:id="@+id/acMax"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/unrated"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/acName" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>